View Issue Details

IDProjectCategoryView StatusLast Update
0033446Open CASCADEOCCT:Modeling Algorithmspublic2023-08-29 16:01
Reporterdpasukhi Assigned Toakaftasev  
PrioritynormalSeveritycrash 
Status verifiedResolutionfixed 
Target VersionUnscheduled 
Summary0033446: Modeling Alghorithms - Creating offset with one of the degenerated edge leads to crash
Description test bugs modalg_4 bug22646
test case on debug mode leads to crash.
The reason is - from working section all degenerated edges removes and we can't find index of not-existed edge.
So, index of this edge is size() + 1, means out-of range.
Steps To Reproducetest bugs modalg_4 bug22646 in debug mode
TagsNo tags attached.
Test case number

Activities

git

2023-08-08 14:52

administrator   ~0113943

Branch CR33446 has been created by andrey.kaftasev_159541.

SHA-1: 433a4dee0e9a1a2e1fe7e48171c5d58b1880613f


Detailed log of new commits:

Author: akaftasev
Date: Tue Aug 8 12:52:12 2023 +0100

    0033446: Modeling Alghorithms - Creating offset with one of the degenerated edge leads to crash
    
    Added condition to prevent out of range error

akaftasev

2023-08-09 12:16

developer   ~0113948

Please, review branch:
OCCT - CR33446

Results of testing:
http://jenkins-test-10.nnov.opencascade.com/view/CR33446-master-akaftasev/view/COMPARE/

dpasukhi

2023-08-22 19:28

administrator   ~0114011

Dear bugmaster,
please integrate:
OCCT: CR33446
PROD: No

vglukhik

2023-08-29 15:05

administrator   ~0114032

Combination -
OCCT branch : IR-2023-08-25
master SHA - 0e97c80e6ab0422fdb1d0ba7c0fcd8d691d62494
38e09ead3f71b0f6ee0ece13e05a6f9009c86eba
Products branch : master SHA - b419f50c1ff2e4e634f8581354deae0658ff50c1
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 17919.410000000214 / 17726.160000000345 [+1.09%]
Products
Total CPU difference: 11794.940000000031 / 11812.120000000012 [-0.15%]
Windows-64-VC142:
OCCT
Total CPU difference: 19240.53125 / 20314.75 [-5.29%]
Products
Total CPU difference: 14057.390625 / 12777.984375 [+10.01%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2023-08-29 16:01

administrator   ~0114036

Branch CR33446 has been deleted by mnt.

SHA-1: 433a4dee0e9a1a2e1fe7e48171c5d58b1880613f

Related Changesets

occt: master 0e97c80e

2023-08-08 11:52:12

akaftasev


Committer: vglukhik Details Diff
0033446: Modeling Alghorithms - Creating offset with one of the degenerated edge leads to crash

Added condition to prevent out of range error
Affected Issues
0033446
mod - src/BRepOffsetAPI/BRepOffsetAPI_ThruSections.cxx Diff File

Issue History

Date Modified Username Field Change
2023-08-07 20:40 dpasukhi New Issue
2023-08-07 20:40 dpasukhi Assigned To => akaftasev
2023-08-07 20:41 dpasukhi Description Updated
2023-08-08 14:52 git Note Added: 0113943
2023-08-09 12:16 akaftasev Assigned To akaftasev => dpasukhi
2023-08-09 12:16 akaftasev Status new => resolved
2023-08-09 12:16 akaftasev Steps to Reproduce Updated
2023-08-09 12:16 akaftasev Note Added: 0113948
2023-08-22 19:28 dpasukhi Assigned To dpasukhi => bugmaster
2023-08-22 19:28 dpasukhi Status resolved => reviewed
2023-08-22 19:28 dpasukhi Note Added: 0114011
2023-08-29 15:05 vglukhik Note Added: 0114032
2023-08-29 15:05 vglukhik Changeset attached => occt master 0e97c80e
2023-08-29 15:05 akaftasev Assigned To bugmaster => akaftasev
2023-08-29 15:05 akaftasev Status reviewed => verified
2023-08-29 15:05 akaftasev Resolution open => fixed
2023-08-29 16:01 git Note Added: 0114036