0033446: Modeling Alghorithms - Creating offset with one of the degenerated edge leads to crash

Added condition to prevent out of range error